# dgm_anisotropic_grf

./: .gitignore  .gitmodules  README.md  python_requirements.txt
python/datasources/: pyproject.toml  requirements.txt
python/datasources/src/datasources/: gauss_spde.py  h5.py
python/diff_post_gauss/: classifier_tests.py  evaluate_batch_wasserstein.py  evaluate_max_sliced_wasserstein.py  extract_info_from_tensorboard.py  fine_tuning_script.py  generate_script.py  join_batch_generated_data_into_h5.py  posterior_sampling.py  pyproject.toml  train_diffusion_script.py  validate_mse.py
python/diff_post_gauss/configs/: model_example.yaml
python/diff_post_gauss/configs/checkpoint/: ambient.yaml
python/diff_post_gauss/configs/conditional_sampler/: daps_default.yaml  daps_double.yaml  dps_default.yaml  mgdm_default.yaml  mgdm_two_times_gibbs.yaml  mgps_300.yaml  mgps_default.yaml
python/diff_post_gauss/configs/datasource/: ambient.yaml
python/diff_post_gauss/configs/denoiser/: ambient.yaml
python/diff_post_gauss/configs/diffusion/: ve_more_tail.yaml
python/diff_post_gauss/configs/ema/: double_ema.yaml
python/diff_post_gauss/configs/inverse_problems/: ganiso_img_0_size_1_clust.yaml  ganiso_img_0_size_1_unif.yaml  ganiso_img_0_size_2_clust.yaml  ganiso_img_0_size_2_unif.yaml  ganiso_img_1_size_1_clust.yaml  ganiso_img_1_size_1_unif.yaml  ganiso_img_1_size_2_clust.yaml  ganiso_img_1_size_2_unif.yaml  ganiso_img_1_size_3_clust.yaml  (+9 more)
python/diff_post_gauss/diffgauss/: samplers.py  training.py  utils.py  weight_average_callback.py
python/diff_post_gauss/src/: local_paths.py
python/latent_vae/: README.md  learning_vae.py  plot_clouds.py  posterior_sampling.py  pyproject.toml  requirements.txt
python/latent_vae/configs/: ldm_diag_compression_8_res32.yaml
(+132 files in other folders)
