[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasources"
version = "0.0.0"
description = "A package containing data sources that I have used."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "torchvision",
  "h5py",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]